@@ -382,6 +382,7 @@ filefilters.description.xml.bibles=XML Bibles
 filefilters.description.xml.easyslide=XML Easyslide files
 filefilters.description.xml.files=XML files
 filefilters.description.video.files=Video files
+filefilters.description.pmsong.files=Presentation Manager Songs
 filefilters.description.audio.files=Audio files
 filefilters.description.quelea.schedules=Quelea Schedules
 filefilters.description.powerpoint.presentations=Powerpoint Presentations
@@ -506,7 +507,9 @@ copying.video.please.wait.text=Hang on a moment - just copying the video file...
 translating.text.please.wait.text=Hang on a moment - grabbing a translation...
 filefilters.description.usr.files=USR (SongSelect) files
 songselect.import.line1=Select the SongSelect files below.
+pm.import.line1=Select the Presentation Manager songs to import.
 songselect.button=SongSelect
+pm.button=Presentation Manager
 translation.export.heading=Translation export
 include.translations.question=Include the translations in the PDF file?
 slide.text=Slide
